--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@dotenvc/strings",
   "module": "index.ts",
   "type": "module",
+  "version": "0.0.0-test",
   "author": "Axolem <https://github.com/axolem>",
   "license": "MIT",
   "devDependencies": {
