--- a/.github/workflows/npm-publish-async-await.yml
+++ b/.github/workflows/npm-publish-async-await.yml
@@ -1,37 +1,45 @@
-# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
-# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
-
 name: Bun Package
 
 on:
-  release:
-    types: [created]
+    push:
+      tags:
+        - 'async-await*' 
+     
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
       - run: bun install
-        working-directory: strings
+        working-directory: async-await
+
       - run: bun test
-        working-directory: strings
+        working-directory: async-await
 
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
       - run: bun install
-        working-directory: strings
+        working-directory: async-await
+
+      - run: bun build
+        working-directory: async-await
+
       - run: bun publish
-        working-directory: strings
+        working-directory: async-await
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
-          NPM_CONFIG_TOKEN : ${{ secrets.npm_token }}
+          NPM_CONFIG_TOKEN: ${{ secrets.npm_token }}
