--- a/.github/workflows/npm-publish-async-await.yml
+++ b/.github/workflows/npm-publish-async-await.yml
@@ -35,7 +35,7 @@ jobs:
       - run: bun install
         working-directory: async-await
 
-      - run: bun build
+      - run: bun run prepare
         working-directory: async-await
 
       - run: bun publish
