--- a/.github/workflows/npm-publish-strings.yml
+++ b/.github/workflows/npm-publish-strings.yml
@@ -35,7 +35,7 @@ jobs:
       - run: bun install
         working-directory: strings
 
-      - run: bun build
+      - run: bun run prepare
         working-directory: strings
 
       - run: bun publish
