--- a/async-await/tsconfig.json
+++ b/async-await/tsconfig.json
@@ -8,11 +8,14 @@
     "jsx": "react-jsx",
     "allowJs": true,
 
+     // Enable declaration file generation
+     "declaration": true,  // This will generate .d.ts files
+     "declarationDir": "./dist/types",  // Where to output .d.ts files
+     "emitDeclarationOnly": false,  // Emit both .ts and .d.ts files (not just .d.ts)
+
     // Bundler mode
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
@@ -23,6 +26,12 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noPropertyAccessFromIndexSignature": false,
+
+    "outDir": "./dist",
+    "incremental": true,
+    "tsBuildInfoFile": "./dist/tsconfig.tsbuildinfo"
+  },
+  "include": ["*.ts", "src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
